hard-gists/32561f20db62886bcf6af5ce98087ab9/run.log
=== Docker Run Log for 32561f20db62886bcf6af5ce98087ab9 ===
Started at: Mi 29. Okt 13:47:38 CET 2025

[2025-10-29 13:47:38] START: Running container for 32561f20db62886bcf6af5ce98087ab9
[2025-10-29 13:47:38] SUCCESS: Container 40bef4adbf39a40f5a454266c63ca2935a90990524023e49f0ee9117436a9156 started for 32561f20db62886bcf6af5ce98087ab9
=== Container logs for 32561f20db62886bcf6af5ce98087ab9 ===
  File "/snippet.py", line 68
    print name
    ^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 32561f20db62886bcf6af5ce98087ab9 ===
[2025-10-29 13:47:41] INFO: Container 40bef4adbf39a40f5a454266c63ca2935a90990524023e49f0ee9117436a9156 has stopped
